--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,16 @@
 body {
-  padding: 50px;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-image: url(background.png);
+  background-image: linear-gradient( 135deg, #bdc3c7 10%, #2c3e50 100%);
+  
+  /* -webkit-background-size: cover; */
+  /* -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; */
 }
 
 a {
-  color: #5161f0;
+  color: #111115;
 }
+
 
