--- a/views/partials/userHeader.hbs
+++ b/views/partials/userHeader.hbs
@@ -1,4 +1,4 @@
-<header class="" style="z-index: 1;">
+<header class="navigation" style="z-index: 1;">
     <nav class="navbar navbar-expand-lg navbar-light bg-dark h-3" >
       <a class="navbar-brand text-light" href="#"><i class="fa-solid fa-clapperboard"></i> Get My Show</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -14,7 +14,7 @@
             <a class="nav-link text-light" href="#"><i class="fa-solid fa-pen"></i> Features</a>
           </li>
           <li class="nav-item active mr-5">
-            <a class="nav-link text-light" href="/get-wishlist"><i class="fa-solid fa-tag"></i> Wish List</a>
+            <a class="nav-link text-light" href="/get-wishlist"><i class="fa-solid fa-tag"></i> Wish List<span id="wish-count" class="badge rounded-pill bg-success">{{movieWishListcount}}</span></a>
           </li>
           <li class="nav-item active dropdown mr-5">
             <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
@@ -27,7 +27,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               {{#if user}}
-              <a class="dropdown-item" href="/login">Profile</a>
+              <a class="dropdown-item" href="/get-profile">Profile</a>
               <a class="dropdown-item" href="/logout">Logout</a>
               {{else}}
               <a class="dropdown-item" href="/signin">SignIn</a>
@@ -39,3 +39,4 @@
       </div>
     </nav>
   </header>
+  
