--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,5 +1,5 @@
 
-<section class="card container mb-5  mt-5 pt-5 bg-secondary">
+<section class="card container mb-5  mt-5 pt-5 ">
     <div class="container mb-5 pt-5" style="width: 30%;">
       <div class="container mb-3">
       <h1 class=""> <i class="fa-solid fa-right-to-bracket"></i> User Login</h1>
@@ -7,10 +7,13 @@
     <form action="/login" method="post" enctype="multipart/form-data">
       <div class="form-group ">
         {{#if loginErr}}
-        <div><p>
-              {{loginErr}}
-        </p></div>
-        {{/if}}
+        <div>
+          <p>
+              {{ loginErr }}
+          </p>
+        </div>
+
+        {{/if }}
       <div class="form-group mt-1">
         <label class="text-light" for="exampleInputEmail1">Email</label>
         <input type="email"  name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -19,9 +22,9 @@
       <div class="form-group mt-3">
         <label class="text-light" for="exampleInputPassword1">Password</label>
         <input type="password" name="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        <a class="text-light" href="/signin">Create an Account</a>
+        <a class="text-dark" href="/signin">Create an Account</a>
       </div>
-      <button type="submit" class="btn btn-outline-light">Submit</button>
+      <button type="submit" class="btn btn-outline-dark">Submit</button>
     </form>
     </div>
   </section>
